Kubernetes/ingress/kubernetes-ingress-nginx/canary-with-sticky-session/apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd
spec:
  selector:
    matchLabels:
      app: httpd
      env: prod
  template:
    metadata:
      labels:
        app: httpd
        env: prod
        deployment: green
    spec:
      containers:
      - name: httpd
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd
spec:
  selector:
    app: httpd
  ports:
  - port: 80
    targetPort: 80
